--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,13 +1,12 @@
 .home-img {
 
     height: 100%;
-    margin-right: 50px;
     width: 100%;
 }
 
 .home p{
     font-size: 50px;
-    margin: 180px 100px 50px 100px;
+    margin: 100px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     color: rgba(136, 0, 199, 1);
