--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,15 +1,16 @@
-.home-img {
-
-    height: 100%;
-    width: 100%;
+.home-img1 {
+    height: 20%;
+    width: 20%;
 }
 
 .home p{
     font-size: 50px;
-    margin: 100px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     color: rgba(136, 0, 199, 1);
+    justify-content: left;
+    margin-left: 10%;
+    margin-top: 10%;
 }
 
 .home {
