--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -11,73 +11,41 @@ input[type=email], input[type=password] {
     height:20px ;
   }
 
-.login-background {
-  width: 100%;
-}
-
   button:hover {
     opacity: 0.8;
     border: none;
   }
  
   .container {
-    position: relative;
-    max-width: 100%; 
     margin: 0 auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
   }  
 
   .container .content {
-    position: absolute;
     color: #000000;
-    width: 100%;
-    height: 100%;
-    margin-top: 100px;
+    width: 50%;
+    justify-content: center;
+    text-align: center;
+    padding: 30px;
   }
 
-  .background {
-    background: rgb(0, 0, 0); 
-    background: rgba(64, 64, 64, 0.5); 
-    position: absolute;
-    color: #000000;
-    width: 100%;
-    height: 100%;
+  .titlle {
+    border-bottom: 1px solid #000000;
   }
 
-  .cancelbtn {
-    width: 100px;
-    height: 30px;
-    padding: 10px;
-    background-color: rgba(224, 144, 223, 1);
-    color: rgba(105, 97, 97, 1);
-    margin: 10px;
-    border: none;
-    border-radius: 20px;
-  }
 
   .loginbtn {
     width: 100px;
-    height: 30px;
-    padding: 10px;
+    height: auto;
+    padding: 5px;
     background-color: rgba(155, 43, 206, 1);
     color: white;
     margin: 10px;
     cursor: pointer;
     border: none;
     border-radius: 20px;
-  }
-
-  .login {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
+    text-align: center;
+    justify-content: center;
   }
 
   .checkbox {
