--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -7,8 +7,7 @@ footer {
   .footer-container {
     display: flex;
     justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
+    margin: 20px auto;
   }
 
   
@@ -16,6 +15,7 @@ footer {
     width: 25%;
     font-size: 2px;
     border-right: rgb(213, 209, 209) 1.3px solid;
+    
   }
 
   .footer-contact h3 {
@@ -26,7 +26,7 @@ footer {
   .footer-contact h4 {
     font-size: 10px;
     opacity: 0.8;
-    padding: 5px 0 2px ;
+    padding: 15px 0 2px ;
   }
 
   .footer-contact p {
@@ -37,6 +37,7 @@ footer {
   .footer-contact a {
     font-size: 10px;
     opacity: 0.6;
+    padding: 10px;
   }
 
   .footer-links {
@@ -84,6 +85,8 @@ footer {
     font-size: 10px;
     line-height: 1.5;
     opacity: 0.6;
+    width: 400px;
+    margin-left: 30px;
   }
   
   .footer-shop {
@@ -111,13 +114,12 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0;
-    margin: 0;
+    padding: 20px;
     opacity: 0.7;
   }
   
   .footer-social ul li {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
   }
   
   .footer-social ul li a {
