--- a/frontend/src/pages/CreateAcc.css
+++ b/frontend/src/pages/CreateAcc.css
@@ -1,14 +1,3 @@
-input[type=email], input[type=password] {
-  width: 200px;
-  padding: 15px 10px;
-  margin: 12px;
-  background-color: rgba(217, 217, 217, 1);
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  font-size: 5px;
-  height:5px ;
-}
 
 input[type=name] {
   width: 100px;
@@ -24,45 +13,70 @@ input[type=name] {
 
 .paragraph {
   font-size: 50px;
+  font-family: fantasy;
   width: 20%;
   color: rgba(178, 97, 216, 1);
+  margin-left: 30px;
+  margin-top: 60px;
 }
 
 .content {
   width: 40%;
   text-align: left;
   margin-left: 50px;
-  color: rgba(103, 92, 92, 1);
+  color: rgb(255, 255, 255);
 }
 
 .logoAcc {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
   justify-content: left;
-  margin-left: 50px;
+  margin-left: 70px;
 }
 
 .container {
   display: flex;
+  flex-direction: row;
 }
 
 .nameAcc input {
   margin-left:  70px;
+  border-radius: 10px;
+  background-color: rgb(254, 228, 254, 1);
+  width: 200px;
+  display: inline-block;
+  border: 1px solid #919191;
+  height:30px ;
+  padding: 10px;
+}
+
+.emailAcc input {
+  margin-left:  10px;
+  border-radius: 10px;
+  background-color: rgba(254, 228, 254, 1);
+  width: 200px;
+  display: inline-block;
+  border: 1px solid #919191;
+  height:30px ;
+  padding: 10px;
 }
 
 .passwordAcc input {
   margin-left: 40px;
-}
-
-.background {
-  margin-right: 50px;
-  height: 100%;
-  width: 50%;
-  background: rgb(0, 0, 0); 
-  background: rgba(64, 64, 64, 0.5);
+  border-radius: 10px;
+  background-color: rgba(254, 228, 254, 1);
+  width: 200px;
+  display: inline-block;
+  border: 1px solid #919191;
+  height:30px ;
+  padding: 10px;
 }
 
 .create-acc {
-  background-color: rgba(241, 240, 242, 1);
+  background-color: rgb(255, 255, 255);
   color: rgba(103, 92, 92, 1);
+}
+
+.container label {
+  font-size: 15px;
 }
