--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,11 +1,13 @@
-.home-img1 {
-    height: 20%;
-    width: 20%;
+.home-img {
+    height: 80%;
+    width: 70%;
+    justify-content: top;
+
 }
 
 .home p{
-    font-size: 50px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 60px;
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
     color: rgba(136, 0, 199, 1);
     justify-content: left;
@@ -15,4 +17,5 @@
 
 .home {
     display: flex;
+    flex-direction: row;
 }
