--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,8 +1,7 @@
 .home-img {
-    height: 80%;
-    width: 70%;
-    justify-content: top;
-
+    height: 40%;
+    width: 850px;
+    
 }
 
 .home p{
