--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,44 +1,36 @@
   .header {
     display: flex;
     background-color: rgb(255, 255, 255);
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
   
   .navbar-logo {
     display: flex;
     justify-content: center;
+    margin-right: 8rem;
   }
   
   .navbar-menu {
     display: flex;
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 10px;
   }
   
-  
-  .navbar-menu-item a {
-    color: rgb(0, 0, 0);
-    text-decoration: rgb(0, 0, 0);
-    font-size: 10px;
-  }
-  
-  .navbar-menu-item a:hover {
-    color: #a9a1a1;
-  }
   
   .navbar-search {
     display: flex;
     align-items: center;
     justify-content: left;
+    margin-right: 2rem;
   }
   
   .navbar-search input {
     padding: 10px;
-    border: 1px solid #efe7e7;
+    border: 2px solid #efe7e7;
     border-radius: 20px;
-    width: 200px;
+    width: 150px;
     height: 30px;
     font-size: 2px;
     
@@ -82,11 +74,11 @@
     justify-content: left;
   }
   
-  .dropdown-content a:hover {background-color: grey; color: white;}
+  .dropdown-content a:hover {background-color: rgb(206, 202, 202); color: white;}
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: black; color: white;}
+  .dropdown:hover .dropbtn {background-color: black; color: rgb(151, 151, 151);}
   
   .menu {
     display: flex;
@@ -105,3 +97,4 @@
     background-color: black;
     border-radius: 0.2rem;
   }
+
