--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -34,7 +34,7 @@ input[type=email], input[type=password] {
     width: 100px;
     height: auto;
     padding: 5px;
-    background-color: rgba(155, 43, 206, 1);
+    background-color: rgb(196, 165, 40);
     color: white;
     margin: 10px;
     cursor: pointer;
